--- a/aem-project/core/pom.xml
+++ b/aem-project/core/pom.xml
@@ -145,6 +145,10 @@ Import-Package: javax.annotation;version=0.0.0,*
             <artifactId>javax.annotation-api</artifactId>
         </dependency>
         <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.servlets.annotations</artifactId>
         </dependency>
