--- a/aem-project/pom.xml
+++ b/aem-project/pom.xml
@@ -605,6 +605,12 @@ Bundle-DocURL:
                 <version>1.2.4</version>
                 <scope>provided</scope>
             </dependency>
+            <dependency>
+                <groupId>javax.inject</groupId>
+                <artifactId>javax.inject</artifactId>
+                <version>1</version>
+                <scope>provided</scope>
+            </dependency>
             <!-- Logging Dependencies -->
             <dependency>
                 <groupId>org.slf4j</groupId>
