--- a/aem-project/pom.xml
+++ b/aem-project/pom.xml
@@ -31,6 +31,7 @@
         <module>ui.apps</module>
         <module>ui.apps.structure</module>
         <module>ui.content</module>
+        <module>../dispatcher-config-basic</module>
     </modules>
 
     <properties>
@@ -46,6 +47,7 @@
         <bnd.version>5.0.0</bnd.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <componentGroupName>AEM Experiments</componentGroupName>
     </properties>
 
     <build>
